--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bulma": "^0.7.1",
     "intersection-observer": "^0.5.0",
     "nuxt-edge": "^2.0.0-25440915.dcc92c6",
+    "scrollama": "^1.4.1",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.2",
     "vue-media": "^1.1.1",
