--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nunziella-salluce-design",
   "version": "1.0.0",
   "description": "Portfolio site for Nunziella Salluce",
-  "author": "Alessandro Giordo - <info@moustachedesign.xyz>",
+  "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.3.1",
