--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "scrollama": "^1.4.1",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.2",
+    "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^0.2.2",
-    "vue-progressive-image": "^2.5.0"
+    "vue-progressive-image": "^2.5.0",
+    "vuelidate": "^0.7.4"
   },
   "scripts": {
     "dev": "nuxt",
