--- a/package.json
+++ b/package.json
@@ -5,58 +5,59 @@
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.1",
-    "@nuxtjs/pwa": "^2.0.8",
+    "@nuxtjs/axios": "^5.3.2",
+    "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/sitemap": "^0.1.1",
     "animejs": "^2.2.0",
     "bulma": "^0.7.1",
     "intersection-observer": "^0.5.0",
-    "nuxt-edge": "^2.0.0-25550715.56db988",
-    "scrollama": "^1.4.1",
+    "nuxt-start": "^2.0.0",
+    "scrollama": "^1.4.3",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.2",
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
-    "vue-no-ssr": "^0.2.2",
+    "vue-no-ssr": "^1.0.0",
     "vue-progressive-image": "^2.5.0",
     "vuelidate": "^0.7.4"
   },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production nuxt start",
+    "start": "cross-env NODE_ENV=production nuxt-start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "cross-env": "^5.1.4",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-vue": "^4.5.0",
-    "image-webpack-loader": "^4.2.0",
-    "imagemin-webpack-plugin": "^2.1.5",
-    "js-beautify": "^1.7.5",
-    "lodash": "^4.17.10",
+    "babel-eslint": "^9.0.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.6.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
+    "image-webpack-loader": "^4.3.1",
+    "imagemin-webpack-plugin": "^2.3.0",
+    "js-beautify": "^1.8.6",
+    "lodash": "^4.17.11",
     "netlify": "^1.2.0",
-    "node-sass": "^4.9.0",
-    "nuxt-sass-resources-loader": "^2.0.0",
-    "postcss-loader": "^2.1.5",
+    "node-sass": "^4.9.3",
+    "nuxt": "^2.0.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "postcss-loader": "^3.0.0",
     "postcss-responsive-type": "^1.0.0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
-    "socket.io": "^2.1.0",
-    "standard": "^11.0.1",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "vue-eslint-parser": "^2.0.3",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.8.1"
+    "socket.io": "^2.1.1",
+    "standard": "^12.0.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "vue-eslint-parser": "^3.2.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.19.1"
   }
 }
