--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.3.2",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/sitemap": "^0.1.1",
     "animejs": "^2.2.0",
     "axios-extensions": "^3.0.3",
     "bulma": "^0.7.1",
+    "cookie-universal-nuxt": "^2.0.5",
     "intersection-observer": "^0.5.0",
     "nuxt-start": "^2.0.0",
     "scrollama": "^1.4.3",
