--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.7.1",
     "cookie-universal-nuxt": "^2.0.5",
     "intersection-observer": "^0.5.0",
+    "lru-cache": "^4.1.3",
     "nuxt-start": "^2.0.0",
     "scrollama": "^1.4.3",
     "vue-awesome-swiper": "2.6.7",
