--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lru-cache": "^4.1.3",
     "nuxt-start": "^2.0.0",
     "scrollama": "^1.4.3",
+    "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.2",
     "vue-localstorage": "^0.6.2",
