--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production nuxt-start",
-    "generate": "nuxt generate",
+    "generate": "cross-env NODE_ENV=production nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
