--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "vuelidate": "^0.7.4"
   },
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production nuxt-start",
+    "dev": "cross-env NODE_ENV=development nuxt",
+    "build": "cross-env NODE_ENV=production nuxt build",
+    "start": "cross-env NODE_ENV=development nuxt-start",
     "generate": "cross-env NODE_ENV=production nuxt generate",
+    "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
