--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev": "cross-env NODE_ENV=development nuxt",
     "build": "cross-env NODE_ENV=production nuxt build",
     "start": "cross-env NODE_ENV=development nuxt-start",
-    "generate": "cross-env NODE_ENV=production nuxt generate",
+    "generate": "nuxt generate",
     "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
