--- a/package.json
+++ b/package.json
@@ -5,26 +5,28 @@
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.4",
+    "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/proxy": "^1.3.1",
     "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/sitemap": "^0.1.1",
-    "animejs": "^2.2.0",
-    "axios-extensions": "^3.0.3",
+    "@nuxtjs/sitemap": "^0.2.0",
+    "@nuxtjs/style-resources": "^0.1.1",
+    "animejs": "^3.0.1",
+    "axios-extensions": "^3.0.5",
     "bulma": "^0.7.2",
-    "cookie-universal-nuxt": "^2.0.5",
+    "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.5.1",
-    "lru-cache": "^4.1.3",
-    "nuxt-start": "^2.2.0",
+    "lru-cache": "^5.1.1",
+    "nuxt": "^2.4.0",
+    "nuxt-start": "^2.4.0",
     "scrollama": "^1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.2",
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
-    "vue-no-ssr": "^1.0.0",
-    "vue-progressive-image": "^2.5.0",
+    "vue-no-ssr": "^1.1.1",
+    "vue-progressive-image": "2.5.0",
     "vue-router": "^3.0.2",
     "vue-scrollto": "^2.13.0",
     "vuelidate": "^0.7.4"
@@ -42,33 +44,31 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^4.7.1",
-    "image-webpack-loader": "^4.5.0",
-    "imagemin-webpack-plugin": "^2.3.0",
-    "js-beautify": "^1.8.8",
+    "eslint-plugin-vue": "^5.1.0",
+    "image-webpack-loader": "^4.6.0",
+    "imagemin-webpack-plugin": "^2.4.0",
+    "js-beautify": "^1.8.9",
     "lodash": "^4.17.11",
-    "netlify": "^2.2.0",
-    "node-sass": "^4.10.0",
-    "nuxt": "^2.2.0",
+    "netlify": "^2.2.4",
+    "node-sass": "^4.11.0",
     "nuxt-sass-resources-loader": "^2.0.5",
     "opn": "^5.4.0",
     "postcss-loader": "^3.0.0",
     "postcss-responsive-type": "^1.0.0",
     "sass-loader": "^7.1.0",
-    "sass-resources-loader": "^1.3.4",
-    "socket.io": "^2.1.1",
+    "socket.io": "^2.2.0",
     "standard": "^12.0.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "vue-eslint-parser": "^3.2.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.25.1"
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "vue-eslint-parser": "^5.0.0",
+    "vue-template-compiler": "^2.5.22",
+    "webpack": "^4.29.0"
   }
 }
