--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.5.1",
     "lru-cache": "^5.1.1",
-    "nuxt": "^2.4.0",
+    "nuxt": "^2.4.3",
     "nuxt-start": "^2.4.0",
     "scrollama": "^1.4.4",
     "splitting": "^1.0.6",
@@ -36,7 +36,7 @@
     "build": "cross-env NODE_ENV=production nuxt build",
     "start": "cross-env NODE_ENV=development nuxt-start",
     "startProd": "cross-env NODE_ENV=production nuxt-start",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate --modern",
     "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -44,6 +44,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.1",
@@ -69,6 +70,7 @@
     "standard": "^12.0.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "vue-eslint-parser": "^5.0.0",
+    "vue-loader": "^15.6.2",
     "vue-template-compiler": "^2.5.22",
     "webpack": "^4.29.0"
   }
