--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
   "name": "nunziella-salluce-design",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Portfolio site for Nunziella Salluce",
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/proxy": "^1.3.1",
-    "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/google-analytics": "^2.1.0",
+    "@nuxtjs/proxy": "^1.3.2",
+    "@nuxtjs/pwa": "^3.0.0-beta.8",
     "@nuxtjs/sitemap": "^0.2.0",
-    "@nuxtjs/style-resources": "^0.1.1",
+    "@nuxtjs/style-resources": "^0.1.2",
     "animejs": "^3.0.1",
     "axios-extensions": "^3.0.5",
-    "bulma": "^0.7.2",
+    "bulma": "^0.7.4",
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.5.1",
     "lru-cache": "^5.1.1",
     "nuxt": "^2.4.3",
-    "nuxt-start": "^2.4.0",
     "scrollama": "^1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
-    "vue-intersect": "^1.1.2",
+    "vue-intersect": "^1.1.3",
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
@@ -45,20 +44,21 @@
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.14.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-html": "^5.0.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-html": "^5.0.3",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "eslint-plugin-vue": "^5.2.2",
     "image-webpack-loader": "^4.6.0",
-    "imagemin-webpack-plugin": "^2.4.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "js-beautify": "^1.8.9",
     "lodash": "^4.17.11",
-    "netlify": "^2.2.4",
+    "netlify": "^2.3.0",
+    "nuxt-start": "^2.4.3",
     "node-sass": "^4.11.0",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-sass-resources-loader": "^2.0.5",
@@ -69,9 +69,9 @@
     "socket.io": "^2.2.0",
     "standard": "^12.0.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue-eslint-parser": "^5.0.0",
-    "vue-loader": "^15.6.2",
-    "vue-template-compiler": "^2.5.22",
-    "webpack": "^4.29.0"
+    "vue-eslint-parser": "^6.0.2",
+    "vue-loader": "^15.6.3",
+    "vue-template-compiler": "^2.6.6",
+    "webpack": "^4.29.5"
   }
 }
