added cv, slider and updated nuxt

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
     "vue-progressive-image": "2.5.0",
-    "vue-router": "^3.0.2",
     "vue-scrollto": "^2.13.0",
     "vuelidate": "^0.7.4"
   },
@@ -43,35 +42,17 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
     "eslint": "^5.14.1",
-    "eslint-config-standard": "^12.0.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "image-webpack-loader": "^4.6.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "js-beautify": "^1.8.9",
     "lodash": "^4.17.11",
     "netlify": "^2.3.0",
-    "nuxt-start": "^2.4.3",
     "node-sass": "^4.11.0",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-sass-resources-loader": "^2.0.5",
+    "nuxt-start": "^2.4.3",
     "opn": "^5.4.0",
     "postcss-loader": "^3.0.0",
     "postcss-responsive-type": "^1.0.0",
-    "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0",
-    "standard": "^12.0.1",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "vue-eslint-parser": "^6.0.2",
-    "vue-loader": "^15.6.3",
-    "vue-template-compiler": "^2.6.6",
-    "webpack": "^4.29.5"
+    "sass-loader": "^7.1.0"
   }
 }
