--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/google-analytics": "^2.1.0",
-    "@nuxtjs/proxy": "^1.3.2",
-    "@nuxtjs/pwa": "^3.0.0-beta.8",
-    "@nuxtjs/sitemap": "^0.2.0",
+    "@nuxtjs/axios": "^5.4.1",
+    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/pwa": "^3.0.0-beta.14",
+    "@nuxtjs/sitemap": "^0.2.2",
     "@nuxtjs/style-resources": "^0.1.2",
     "animejs": "^3.0.1",
     "axios-extensions": "^3.0.5",
@@ -17,8 +17,8 @@
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.5.1",
     "lru-cache": "^5.1.1",
-    "nuxt": "^2.4.3",
-    "scrollama": "^1.4.4",
+    "nuxt": "^2.5.0",
+    "scrollama": "^2.0.0",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.3",
@@ -26,12 +26,12 @@
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
     "vue-progressive-image": "2.5.0",
-    "vue-scrollto": "^2.13.0",
+    "vue-scrollto": "^2.15.0",
     "vuelidate": "^0.7.4"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt",
-    "build": "cross-env NODE_ENV=production nuxt build",
+    "dev": "cross-env NODE_ENV=development nuxt --analyze",
+    "build": "cross-env NODE_ENV=production nuxt build --modern",
     "start": "cross-env NODE_ENV=development nuxt-start",
     "startProd": "cross-env NODE_ENV=production nuxt-start",
     "generate": "nuxt generate --modern",
@@ -42,16 +42,17 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.3",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
     "lodash": "^4.17.11",
-    "netlify": "^2.3.0",
+    "netlify": "^2.4.1",
     "node-sass": "^4.11.0",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-start": "^2.4.3",
-    "opn": "^5.4.0",
+    "nuxt-start": "^2.5.0",
+    "opn": "^5.5.0",
     "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
     "postcss-responsive-type": "^1.0.0",
     "sass-loader": "^7.1.0"
   }
