--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "intersection-observer": "^0.5.1",
     "lru-cache": "^5.1.1",
     "nuxt": "^2.5.0",
-    "scrollama": "^2.0.0",
+    "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.3",
