--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
-language: 'node_js'
-node_js: '8'
-
-before_script:
+language: node_js
+node_js:
+  - "stable"
+cache:
+  directories:
+    - node_modules
+script:
   - npm run lint
-  - npm install
-
-script: npm run build
+  - npm run build
+branches:
+  only: master
