--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nuxt --analyze",
     "build": "cross-env NODE_ENV=production nuxt build --modern",
-    "start": "cross-env NODE_ENV=development nuxt-start",
+    "start": "cross-env NODE_ENV=production nuxt-start",
     "startProd": "cross-env NODE_ENV=production nuxt-start",
     "generate": "nuxt generate --modern",
     "staging": "cross-env NODE_ENV=development now --public",
