--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bulma": "^0.7.4",
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.6.0",
+    "lazysizes": "^5.0.0-rc1",
     "lru-cache": "^5.1.1",
     "nuxt": "^2.6.2",
     "scrollama": "1.4.4",
