--- a/package.json
+++ b/package.json
@@ -7,25 +7,24 @@
   "greenkeeper": {
     "ignore": [
       "scrollama",
-      "vue-awesome-swiper",
-      "vue-progressive-image"
+      "vue-awesome-swiper"
     ]
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.4.1",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/pwa": "^3.0.0-beta.14",
-    "@nuxtjs/sitemap": "^1.0.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.16",
+    "@nuxtjs/sitemap": "^1.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "animejs": "^3.0.1",
     "axios-extensions": "^3.0.5",
     "bulma": "^0.7.4",
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.7.0",
-    "lazysizes": "^5.0.0-rc1",
+    "lazysizes": "^5.0.0-rc2",
     "lru-cache": "^5.1.1",
-    "nuxt": "^2.6.2",
+    "nuxt": "^2.6.3",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -33,12 +32,11 @@
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
-    "vue-progressive-image": "2.5.0",
     "vue-scrollto": "^2.15.0",
     "vuelidate": "^0.7.4"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt --analyze",
+    "dev": "cross-env NODE_ENV=development nuxt",
     "build": "cross-env NODE_ENV=production nuxt build --modern",
     "start": "cross-env NODE_ENV=production nuxt-start",
     "startProd": "cross-env NODE_ENV=production nuxt-start",
@@ -54,10 +52,10 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
     "lodash": "^4.17.11",
-    "netlify": "^2.4.1",
-    "node-sass": "^4.11.0",
+    "netlify": "^2.4.4",
+    "node-sass": "^4.12.0",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-start": "^2.6.2",
+    "nuxt-start": "^2.6.3",
     "opn": "^6.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
