--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "@nuxtjs/pwa": "^3.0.0-beta.16",
     "@nuxtjs/sitemap": "^1.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
-    "animejs": "^3.0.1",
     "axios-extensions": "^3.0.5",
     "bulma": "^0.7.4",
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.7.0",
-    "lazysizes": "^5.0.0-rc2",
+    "lazysizes": "^5.0.0",
     "lru-cache": "^5.1.1",
-    "nuxt": "^2.6.3",
+    "nuxt": "^2.7.1",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -55,7 +54,7 @@
     "netlify": "^2.4.4",
     "node-sass": "^4.12.0",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-start": "^2.6.3",
+    "nuxt-start": "^2.7.1",
     "opn": "^6.0.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
