--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "description": "Portfolio site for Nunziella Salluce",
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nuxt --modern",
+    "build": "cross-env NODE_ENV=production nuxt build --modern",
+    "start": "cross-env NODE_ENV=production nuxt-start",
+    "startProd": "cross-env NODE_ENV=production nuxt-start",
+    "generate": "nuxt generate --modern",
+    "staging": "cross-env NODE_ENV=development now --public",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
+  },
   "greenkeeper": {
     "ignore": [
       "scrollama",
@@ -33,16 +43,6 @@
     "vue-no-ssr": "^1.1.1",
     "vue-scrollto": "^2.15.0",
     "vuelidate": "^0.7.4"
-  },
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt",
-    "build": "cross-env NODE_ENV=production nuxt build --modern",
-    "start": "cross-env NODE_ENV=production nuxt-start",
-    "startProd": "cross-env NODE_ENV=production nuxt-start",
-    "generate": "nuxt generate --modern",
-    "staging": "cross-env NODE_ENV=development now --public",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
