added missing dep

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-vue": "^5.2.2",
     "lodash": "^4.17.11",
     "netlify": "^2.4.4",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-start": "^2.7.1",
