--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     ]
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.4.1",
+    "@nuxt/http": "^0.1.2",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/pwa": "^3.0.0-beta.16",
