--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
