--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nuxt --modern",
     "build": "cross-env NODE_ENV=production nuxt build --modern",
-    "start": "cross-env NODE_ENV=production nuxt-start",
-    "startProd": "cross-env NODE_ENV=production nuxt-start",
+    "start": "cross-env NODE_ENV=production nuxt-start --modern",
+    "startProd": "cross-env NODE_ENV=production nuxt-start --modern",
     "generate": "nuxt generate --modern",
     "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
+  "browserslist": [
+    "last 2 versions",
+    "not dead"
+  ],
   "greenkeeper": {
     "ignore": [
       "scrollama",
@@ -21,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "@nuxt/http": "^0.1.2",
+    "@nuxt/http": "^0.2.0",
     "@nuxtjs/component-cache": "^1.1.4",
     "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/proxy": "^1.3.3",
@@ -29,7 +33,7 @@
     "@nuxtjs/sitemap": "^1.2.0",
     "@nuxtjs/style-resources": "^0.1.2",
     "axios-extensions": "^3.0.5",
-    "bulma": "^0.7.4",
+    "bulma": "^0.7.5",
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.7.0",
     "lazysizes": "^5.0.0",
