--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "browserslist": [
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie <= 11"
   ],
   "greenkeeper": {
     "ignore": [
@@ -36,7 +37,6 @@
     "cookie-universal-nuxt": "^2.0.14",
     "intersection-observer": "^0.7.0",
     "lazysizes": "^5.1.0",
-    "lru-cache": "^5.1.1",
     "nuxt": "^2.8.0",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
@@ -60,7 +60,7 @@
     "node-sass": "^4.12.0",
     "nuxt-purgecss": "^0.2.1",
     "nuxt-start": "^2.8.0",
-    "opn": "^6.0.0",
+    "open": "^6.3.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.2",
     "postcss-responsive-type": "^1.0.0",
