--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     ]
   },
   "dependencies": {
-    "@nuxt/http": "^0.3.2",
+    "@nuxt/http": "^0.3.8",
     "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/google-analytics": "^2.2.2",
     "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/pwa": "^3.0.0-beta.16",
-    "@nuxtjs/sitemap": "^1.2.0",
-    "@nuxtjs/style-resources": "^0.1.2",
-    "bulma": "^0.7.5",
-    "cookie-universal-nuxt": "^2.0.14",
+    "@nuxtjs/pwa": "^3.0.0-beta.19",
+    "@nuxtjs/sitemap": "^2.0.1",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "bulma": "^0.8.0",
+    "cookie-universal-nuxt": "^2.1.0",
     "intersection-observer": "^0.7.0",
-    "lazysizes": "^5.1.0",
-    "nuxt": "^2.8.1",
+    "lazysizes": "^5.2.0-beta1",
+    "nuxt": "^2.10.2",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -47,24 +47,24 @@
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
-    "vue-scrollto": "^2.15.0",
+    "vue-scrollto": "^2.17.1",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "axios": "^0.19.0",
-    "babel-eslint": "^10.0.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.0.1",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-vue": "^5.2.2",
-    "lodash": "^4.17.13",
+    "babel-eslint": "^10.0.3",
+    "cross-env": "^6.0.3",
+    "eslint": "^6.7.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-vue": "^6.0.1",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-start": "^2.8.1",
-    "open": "^6.3.0",
+    "nuxt-start": "^2.10.2",
+    "open": "^7.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.1.2",
+    "postcss-nested": "^4.2.1",
     "postcss-responsive-type": "^1.0.0",
     "sass-loader": "^8.0.0"
   }
