--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     ]
   },
   "dependencies": {
-    "@nuxt/http": "^0.3.8",
+    "@nuxt/http": "^0.3.9",
     "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/google-analytics": "^2.2.2",
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/proxy": "^1.3.3",
-    "@nuxtjs/pwa": "^3.0.0-beta.19",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "@nuxtjs/sitemap": "^2.0.1",
     "@nuxtjs/style-resources": "^1.0.0",
     "bulma": "^0.8.0",
-    "cookie-universal-nuxt": "^2.1.0",
+    "cookie-universal-nuxt": "^2.1.1",
     "intersection-observer": "^0.7.0",
-    "lazysizes": "^5.2.0-beta1",
-    "nuxt": "^2.10.2",
+    "lazysizes": "^5.2.0",
+    "nuxt": "^2.11.0",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -51,21 +51,21 @@
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.7.2",
+    "cross-env": "^7.0.0",
+    "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-vue": "^6.1.2",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "nuxt-purgecss": "^0.2.1",
-    "nuxt-start": "^2.10.2",
-    "open": "^7.0.0",
+    "nuxt-start": "^2.11.0",
+    "open": "^7.0.2",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-responsive-type": "^1.0.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.2"
   }
 }
