--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cross-env NODE_ENV=production nuxt build --modern",
     "start": "cross-env NODE_ENV=production nuxt-start --modern",
     "startProd": "cross-env NODE_ENV=production nuxt-start --modern",
-    "generate": "nuxt generate --modern",
+    "serve": "nuxt serve",
+    "generate": "nuxt build --modern && nuxt export --modern",
     "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -22,18 +23,18 @@
     "not ie > 0"
   ],
   "dependencies": {
-    "@nuxt/http": "^0.5.1",
+    "@nuxt/http": "^0.5.5",
     "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/google-analytics": "^2.2.3",
-    "@nuxtjs/proxy": "^1.3.3",
+    "@nuxtjs/google-analytics": "^2.3.0",
+    "@nuxtjs/proxy": "^2.0.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "@nuxtjs/sitemap": "^2.2.1",
+    "@nuxtjs/sitemap": "^2.3.2",
     "@nuxtjs/style-resources": "^1.0.0",
-    "bulma": "^0.8.2",
-    "cookie-universal-nuxt": "^2.1.3",
+    "bulma": "^0.9.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "intersection-observer": "^0.10.0",
-    "lazysizes": "^5.2.1",
-    "nuxt": "^2.12.2",
+    "lazysizes": "^5.2.2",
+    "nuxt": "^2.13.0",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -48,15 +49,15 @@
     "axios": "^0.19.2",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.14.1",
     "nuxt-purgecss": "^1.0.0",
-    "nuxt-start": "^2.12.2",
-    "open": "^7.0.3",
+    "nuxt-start": "^2.13.0",
+    "open": "^7.0.4",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.1",
     "postcss-responsive-type": "^1.0.0",
