--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,8 @@
   "plugins": [
     "transform-runtime",
     "transform-class-properties",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "@babel/plugin-proposal-optional-chaining"
   ],
   "env": {
     "test": {
