updated deps, fixed cv z-index

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "Alessandro Giordo - <16958684+bovas85@users.noreply.github.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nuxt --modern",
-    "build": "cross-env NODE_ENV=production nuxt build --modern",
-    "start": "cross-env NODE_ENV=production nuxt-start --modern",
-    "startProd": "cross-env NODE_ENV=production nuxt-start --modern",
+    "dev": "cross-env NODE_ENV=development nuxt",
+    "build": "cross-env NODE_ENV=production nuxt build",
+    "start": "cross-env NODE_ENV=production nuxt-start",
+    "startProd": "cross-env NODE_ENV=production nuxt-start",
     "serve": "nuxt serve",
-    "generate": "nuxt build --modern && nuxt export --modern",
+    "generate": "nuxt build && nuxt generate",
     "staging": "cross-env NODE_ENV=development now --public",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
@@ -23,18 +23,18 @@
     "not ie > 0"
   ],
   "dependencies": {
-    "@nuxt/http": "^0.5.5",
-    "@nuxtjs/component-cache": "^1.1.5",
-    "@nuxtjs/google-analytics": "^2.3.0",
-    "@nuxtjs/proxy": "^2.0.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "@nuxtjs/sitemap": "^2.3.2",
+    "@nuxt/http": "^0.6.1",
+    "@nuxtjs/component-cache": "^1.1.6",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/proxy": "^2.1.0",
+    "@nuxtjs/pwa": "^3.3.2",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "bulma": "^0.9.0",
+    "bulma": "^0.9.1",
     "cookie-universal-nuxt": "^2.1.4",
-    "intersection-observer": "^0.10.0",
+    "intersection-observer": "^0.12.0",
     "lazysizes": "^5.2.2",
-    "nuxt": "^2.13.0",
+    "nuxt": "^2.14.12",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
     "vue-awesome-swiper": "2.6.7",
@@ -42,26 +42,26 @@
     "vue-localstorage": "^0.6.2",
     "vue-media": "^1.1.1",
     "vue-no-ssr": "^1.1.1",
-    "vue-scrollto": "^2.18.1",
-    "vuelidate": "^0.7.5"
+    "vue-scrollto": "^2.20.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
-    "axios": "^0.19.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.2.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "lodash": "^4.17.15",
-    "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
+    "eslint-plugin-vue": "^7.3.0",
+    "lodash": "^4.17.20",
+    "node-fetch": "^2.6.1",
+    "node-sass": "^5.0.0",
     "nuxt-purgecss": "^1.0.0",
-    "nuxt-start": "^2.13.0",
-    "open": "^7.0.4",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.1",
+    "nuxt-start": "^2.14.12",
+    "open": "^7.3.0",
+    "postcss-loader": "^4.1.0",
+    "postcss-nested": "^5.0.3",
     "postcss-responsive-type": "^1.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^10.1.0"
   }
 }
