--- a/package.json
+++ b/package.json
@@ -23,20 +23,21 @@
     "not ie > 0"
   ],
   "dependencies": {
-    "@nuxt/http": "^0.6.1",
+    "@nuxt/http": "^0.6.4",
     "@nuxtjs/component-cache": "^1.1.6",
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/proxy": "^2.1.0",
-    "@nuxtjs/pwa": "^3.3.2",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.0.0",
-    "bulma": "^0.9.1",
+    "bulma": "^0.9.2",
     "cookie-universal-nuxt": "^2.1.4",
     "intersection-observer": "^0.12.0",
-    "lazysizes": "^5.2.2",
-    "nuxt": "^2.14.12",
+    "lazysizes": "^5.3.2",
+    "nuxt": "^2.15.5",
     "scrollama": "1.4.4",
     "splitting": "^1.0.6",
+    "swiper": "^6.5.9",
     "vue-awesome-swiper": "2.6.7",
     "vue-intersect": "^1.1.6",
     "vue-localstorage": "^0.6.2",
@@ -46,22 +47,32 @@
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.15.0",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.26.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^7.3.0",
+    "eslint-plugin-vue": "^7.9.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.0",
     "nuxt-purgecss": "^1.0.0",
-    "nuxt-start": "^2.14.12",
-    "open": "^7.3.0",
-    "postcss-loader": "^4.1.0",
-    "postcss-nested": "^5.0.3",
+    "nuxt-start": "^2.15.5",
+    "open": "^8.0.8",
+    "postcss": "^8.2.14",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "4.2.0",
+    "postcss-nested": "^5.0.5",
     "postcss-responsive-type": "^1.0.0",
-    "sass-loader": "^10.1.0"
+    "postcss-url": "^10.1.3",
+    "sass-loader": "10.2.0"
+  },
+  "resolutions": {
+    "swiper": "^6.5.9"
+  },
+  "volta": {
+    "node": "14.16.1"
   }
 }
